# haybale-visiongraph

./: .gitignore  CLAUDE.md  README.md  marketstall.toml  pyproject.toml
.haywire/: config.toml  marketplace.toml
barn/haybale-visiongraph/: notes.md  pyproject.toml
barn/haybale-visiongraph/haybale_visiongraph/: OVERVIEW.md  QUICKREF.md  __init__.py
barn/haybale-visiongraph/haybale_visiongraph/adapters/: frame_adapters.py
barn/haybale-visiongraph/haybale_visiongraph/docs/: numpy_viewer_guide.md
barn/haybale-visiongraph/haybale_visiongraph/docs/nodes/: FrameInfoDisplayNode.md  WebCamNode.md
barn/haybale-visiongraph/haybale_visiongraph/docs/widgets/: NumpyViewerWidget.md
barn/haybale-visiongraph/haybale_visiongraph/help/: opencv_viewer_architecture.md
barn/haybale-visiongraph/haybale_visiongraph/nodes/: __init__.py  annotate_node.py  base_estimator_node.py  frame_info_display_node.py  numpy_frame_display_node.py  numpy_frame_event_node.py  oak_d_camera_node.py  oak_d_emit_node.py  object_detector_node.py  pose_estimator_node.py  segmentation_node.py  start_web_cam_stream_node.py  three_d_frame_event_node.py  tracker_node.py  web_cam_node.py  webcam_frame_event_node.py
barn/haybale-visiongraph/haybale_visiongraph/types/: __init__.py  frame_type.py  multiframe_callback_type.py  result_type.py
barn/haybale-visiongraph/haybale_visiongraph/widgets/: __init__.py  numpy_viewer_widget.py  opencv_viewer_widget.py
barn/haybale-visiongraph/haybale_visiongraph/widgets/components/: numpy_viewer.js  opencv_viewer.js  streaming_viewer.py
