[project]
name = "haybale-visiongraph"
version = "0.0.17"
description = "Visiongraph library for Haywire node system demonstrating custom types, nodes, widgets, and renderers"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Haywire Team"}
]
keywords = ["haywire", "node-editor", "visual-programming", "visiongraph"]

dependencies = [
    "haywire-core~=0.0.8",
    "haybale-core~=0.0.8",
    "visiongraph[all]",
    # visiongraph's DepthAI input stack is written against the depthai v2 API
    # (RawCameraControl, XLinkOut, getOutputQueue). depthai v3 is an incompatible
    # rewrite, so pin to match visiongraph's own `depthai~=2.30` constraint.
    "depthai~=2.30",
    "numpy",
    "opencv-python",
    "fastapi",
    "nicegui>=3.12.1",
]

# Entry point for Haywire library discovery
[project.entry-points."haywire.libraries"]
visiongraph = "haybale_visiongraph:Library"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["haybale_visiongraph"]

[tool.hatch.build.targets.sdist]
include = [
    "haybale_visiongraph/",
    "README.md",
]
